--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "test-zoo",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://nurislamaituarov.github.io/test-zoo",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
